--- a/angular.json
+++ b/angular.json
@@ -4,8 +4,8 @@
     "analytics": false
   },
   "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
+  "newProjectRoot": "packages",
+  "packages": {
     "drag-and-drop": {
       "projectType": "application",
       "schematics": {
@@ -111,21 +111,21 @@
     },
     "triton": {
       "projectType": "library",
-      "root": "projects/triton",
-      "sourceRoot": "projects/triton/src",
+      "root": "packages/triton",
+      "sourceRoot": "packages/triton/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/triton/ng-package.json"
+            "project": "packages/triton/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/triton/tsconfig.lib.prod.json"
+              "tsConfig": "packages/triton/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/triton/tsconfig.lib.json"
+              "tsConfig": "packages/triton/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -133,9 +133,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/triton/src/test.ts",
-            "tsConfig": "projects/triton/tsconfig.spec.json",
-            "karmaConfig": "projects/triton/karma.conf.js"
+            "main": "packages/triton/src/test.ts",
+            "tsConfig": "packages/triton/tsconfig.spec.json",
+            "karmaConfig": "packages/triton/karma.conf.js"
           }
         }
       }
