--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,10 +6,10 @@
     "types": []
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
+    "demo/main.ts",
+    "demo/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "demo/**/*.d.ts"
   ]
 }
