--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -8,11 +8,11 @@
     ]
   },
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
+    "demo/test.ts",
+    "demo/polyfills.ts"
   ],
   "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "demo/**/*.spec.ts",
+    "demo/**/*.d.ts"
   ]
 }
